--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body.correct {
 }
 
 body.wrong {
-  background-color: #3c5e91;
+  background-color: #3a82ec;
   background-image: url('img/wrong.jpg');
   background-size: cover;
   background-position: center;
@@ -51,7 +51,7 @@ body.wrong {
 
 .btn-grid {
   display: grid;
-  grid-template-columns: repeat(2, auto);
+  grid-template-columns: repeat(2, 1fr);
   gap: 10px;
   margin: 20px 0;
 }
@@ -65,6 +65,8 @@ body.wrong {
   outline: none;
   font-size: 30px;
   font-weight: bold;
+  width: 100%;
+  min-height: 60px;
 }
 
 .btn:hover {
@@ -72,7 +74,7 @@ body.wrong {
 }
 
 .btn.correct {
-  color: rgb(102, 99, 99);
+  color: white;
   /* EDIT THIS FOR RIGHT ANSWER BUTTON BACKGROUND */
   background-color: #6ef379;
 }
